tests/pass/single-yield.mle
type unit = Unit
eff gen = yield : int => unit

val f : [gen](unit -> unit)
let f () = do yield 1
