tests/fail/relative-to-absolute.mle
eff gen = yield : int => int

val id : [](<gen>(int -> int) -> [gen](int -> int))
let id f = f
